# HowIsItToBeHuman-Interaction

./: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
how_is_it_to_be_human_interaction/: how_is_it_to_be_human_interaction_node.py
launch/: how_is_it_to_be_human_interaction.launch.py
pixelbot_msgs/: CMakeLists.txt
sarai_chatgpt/: gpt_requester_node.py  setup.cfg
sarai_msgs/: package.xml
sarai_msgs/srv/: SetSpeech.srv
sarai_speech_recognition/: README.md  package.xml  sarai_speech_recognition_node.py  setup.py
sarai_tts_playsound/: sarai_tts_playsound_node.py  setup.py
src/: ReadME.md
src/how_is_it_to_be_human_interaction/: README.md
src/how_is_it_to_be_human_interaction/launch/: how_is_it_to_be_human_interaction.launch.py
src/sarai_chatgpt/: README.md
src/sarai_chatgpt/sarai_chatgpt/: gpt_requester_node.py
src/sarai_msgs/: README.md
src/sarai_msgs-main/: CMakeLists.txt
src/sarai_msgs-main/srv/: GetGPTRequestParams.srv  RecognizeSpeech.srv
src/sarai_msgs/srv/: GPTRequest.srv  UnsuccessfulSpeechRecognition.srv
src/sarai_speech_recognition/: setup.py
src/sarai_tts_playsound/: README.md  package.xml
src/sarai_tts_playsound/sarai_tts_playsound/: sarai_tts_playsound_node.py
srv/: RecognizeSpeech.srv
