<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>how_is_it_to_be_human_interaction</name>
  <version>0.0.0</version>
  <description>Package taking care of the main interaction of my thesis: Handling a discussion with a robot that uses ChatGPT and a human</description>
  <maintainer email="Oliver.Aberle@student.kit.edu">oliver-aberle</maintainer>
  <license>Apache-2.0</license>

  <depend>std_msgs</depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sarai_msgs</exec_depend>
  <exec_depend>pixelbot_msgs</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
